name:                opencentauri-core
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:             MPL-2.0
license-file:        LICENSE
author:              Duncan Burke
maintainer:          duncankburke@gmail.com

-- A copyright notice.
-- copyright:

category:            Game

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  ghc-optios:          -Wall
  build-depends:       base
  default-language:    Haskell2010
  exposed-modules:     Game.Centauri.Core
  extensions:          BangPatterns,
                       MultiParamTypeClasses,
                       FunctionalDependencies
