name:                opencentauri-core
version:             0.1.0.0
license:             MPL-2.0
license-file:        LICENSE
author:              Duncan Burke
maintainer:          duncankburke@gmail.com

category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  ghc-options:         -Wall
  build-depends:       base,
                       filepath,
                       cereal,
                       bytestring,
                       mtl
  default-language:    Haskell2010
  exposed-modules:     Game.Centauri.Core,
                       Game.Centauri.Core.State,
                       Game.Centauri.Core.Map,
                       Game.Centauri.Assets,
                       Game.Centauri.Assets.Configuration
  extensions:          NamedFieldPuns,
                       ScopedTypeVariables,
                       MonadComprehensions,
                       TupleSections,
                       DisambiguateRecordFields,
                       RecordWildCards
