name:                  toliman-core
version:               0.1.0.0
license:               MPL-2.0
license-file:          LICENSE
author:                Duncan Burke
maintainer:            duncankburke@gmail.com
category:              Game
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -fwarn-monomorphism-restriction
                       -fwarn-tabs
  build-depends:       base,
                       bytestring,
                       lens>=4.6,
                       layers,
                       transformers,
                       template-haskell,
                       sodium,
                       dequeue
  default-language:    Haskell2010
  exposed-modules:     Monad.Ref,
                       Game.Toliman.Core,
                       Game.Toliman.Internal.Lens,
                       Game.Toliman.Internal.Types,
                       Game.Toliman.Internal.Sodium
  default-extensions:  ViewPatterns,
                       PatternSynonyms,
                       NamedFieldPuns,
                       RecordWildCards,
                       GADTs,
                       DeriveDataTypeable,
                       DeriveFunctor,
                       DeriveFoldable,
                       DeriveTraversable,
                       MultiParamTypeClasses,
                       FunctionalDependencies,
                       FlexibleInstances,
                       TypeSynonymInstances,
                       TypeFamilies,
                       ConstraintKinds,
                       FlexibleContexts,
                       KindSignatures,
                       RankNTypes,
                       ScopedTypeVariables,
                       BangPatterns,
                       MultiWayIf
